--- a/content/java-learning-bangla/java-bangla/1.md
+++ b/content/java-learning-bangla/java-bangla/1.md
@@ -1,4 +1,8 @@
-# পাঠ ১: তোমার প্রথম জাভা প্রোগ্রাম
+---
+title: পাঠ ১: তোমার প্রথম জাভা প্রোগ্রাম
+type: book
+weight: 3
+---
 
 আমরা এই চ্যাপ্টার এ যে যে বিষয়গুলো দেখবো সেগুলো হলো-
 
