--- a/content/java-learning-bangla/java-bangla/3.md
+++ b/content/java-learning-bangla/java-bangla/3.md
@@ -1,4 +1,8 @@
-# পাঠ ৩: ডাটা টাইপস এবং অপারেটর
+---
+title: ডাটা টাইপস এবং অপারেটর
+type: book
+weight : 4
+---
 
 *  ভেরিয়েবল
 *  প্রিমিটিভ ডাটাটাইপ - ইন্টিজার, লং, ডাবল, ইন্টিজার, ফ্লোট এবং কার ইত্যাদি।
