--- a/content/java-learning-bangla/java-bangla/1.md
+++ b/content/java-learning-bangla/java-bangla/1.md
@@ -1,7 +1,7 @@
 ---
-title: (পাঠ ১) তোমার প্রথম জাভা প্রোগ্রাম
+title:  তোমার প্রথম জাভা প্রোগ্রাম
 type: book
-weight: 3
+weight: 2
 ---
 
 আমরা এই চ্যাপ্টার এ যে যে বিষয়গুলো দেখবো সেগুলো হলো-
@@ -43,7 +43,7 @@ weight: 3
 
 **জাভা কিভাবে কাজ করে ?**
 
-![how java works](.gitbook/assets/how-java-works.png)
+![how java works](/how-java-works.png)
 
 জাভা কোডকে কম্পাইল করলে সেটি একটি অন্তর্বর্তীকালীন ল্যাংগুয়েজ এ রূপান্তরিত হয়। এটি ঠিক হিউম্যান রিডএবল না আবার মেশিন রিডএবল ও না। একে আমরা বলি বাইট কোড। এই বাইটকোড শুধুমাত্র জাভা ভার্চুয়াল মেশিন\(JVM\) বুঝতে পারে। JVM বাইট কোড কে ইন্টারপ্রেট করে মেশিন ল্যাংগুয়েজ এ রূপান্তরিত করে। এর জন্যে JVM জাস্ট ইন টাইম\(JIT\) কম্পাইলার ব্যবহার করে। সুতরাং দেখা যাচ্ছে, জাভা কোডকে প্রথমে কম্পাইল করা হয়, তারপর সেই আউটপুট কে ইন্টারপ্রেট করা হয়। এক্ষেত্রে প্রশ্ন হতে পারে, জাভা আসলে কি? কম্পাইল্ড ল্যাংগুয়েজ নাকি ইন্টারপ্রেটেড ল্যাংগুয়েজ? উত্তর হচ্ছে জাভা একি সাথে দুটোই।
 
@@ -151,5 +151,5 @@ Save and close .bashrc file.
     }
 ```
 
-![hello world program](.gitbook/assets/hello-world-java.gif)
+![hello world program](/hello-world-java.gif)
 
