--- a/content/java-learning-bangla/java-bangla/3.2.md
+++ b/content/java-learning-bangla/java-bangla/3.2.md
@@ -1,5 +1,7 @@
-# পাঠ ৩.২: এক্সপ্রেশান\(Expressions\), স্টেটমেন্ট \(Statements\) এবং ব্লক\(Blocks\)
-
+---
+title: এক্সপ্রেশান\(Expressions\), স্টেটমেন্ট \(Statements\) এবং ব্লক\(Blocks\)
+type: book
+weight:6
 আমরা ইতিমধ্যে ভেরিয়েবল এবং অপারেটর সম্পর্কে জেনে ফেলেছি, এবার তাহলে আমরা জেনে নিই এক্সপ্রেশান কি।
 
 **এক্সপ্রেশান\(Expressions\)**
